# karnaugh

./: .gitignore  CMakeLists.txt  README  karnaugh.cbp
.trunk/: trunk.yaml
.trunk/configs/: .clang-format
po/: CMakeLists.txt  en.po  hr.po  karnaugh.pot  nl.po
src/: CMakeLists.txt  blamapp.cpp  blamapp.h  blamframe.cpp  blamframe.h  karnaughapp.cc  karnaughapp.cpp  karnaughapp.h  karnaughapplication.cpp  karnaughapplication.h  karnaughconfig.cpp  karnaughconfig.h  karnaughdata.cc  karnaughdata.cpp  karnaughdata.h  karnaughmap.cpp  karnaughmap.h  karnaughwindow.cpp  karnaughwindow.h  kmapgrid.cpp  kmapgrid.h  solutionentry.cc  solutionentry.cpp  solutionentry.h  solutiontree.cc  solutiontree.cpp  solutiontree.h  translationhelper.cpp  translationhelper.h  truthtablegrid.cpp  truthtablegrid.h
